@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,11 +15,10 @@
  */
 package ghidra.plugin.importer;
 
-import java.util.*;
-
 import java.awt.Window;
 import java.io.Closeable;
 import java.io.IOException;
+import java.util.*;
 
 import docking.widgets.OptionDialog;
 import ghidra.app.plugin.core.help.AboutDomainObjectUtils;
@@ -61,7 +60,7 @@ public class ImporterUtilities {
 	 * TODO: will be refactored to use file_extension_icon.xml file info.
 	 */
 	public static final GhidraFileFilter LOADABLE_FILES_FILTER = ExtensionFileFilter.forExtensions(
-		"Loadable files", "exe", "dll", "obj", "drv", "bin", "o", "a", "so", "class", "lib");
+		"Loadable files", "exe", "dll", "obj", "drv", "bin", "hex", "o", "a", "so", "class", "lib");
 
 	/**
 	 * File extension filter for well known 'container' files for GhidraFileChoosers.
@@ -152,8 +151,8 @@ public class ImporterUtilities {
 
 			if (!isFSContainer) {
 				// normal file; do a single-file import
-				importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-					monitor);
+				showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+					programManager, monitor);
 				return;
 			}
 
@@ -214,11 +213,11 @@ public class ImporterUtilities {
 		}
 
 		if (choice == 1) {
-			importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-				monitor);
+			showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+				programManager, monitor);
 		}
 		else if (choice == 2) {
-			BatchImportDialog.showAndImport(tool, null, Arrays.asList(fullFsrl), destinationFolder,
+			BatchImportDialog.showAndImport(tool, null, List.of(fullFsrl), destinationFolder,
 				programManager);
 		}
 		else if (choice == 3) {
@@ -231,6 +230,13 @@ public class ImporterUtilities {
 
 		Objects.requireNonNull(monitor);
 
+		// Don't allow Add To Program while "things are happening" to the program
+		if (!program.canLock()) {
+			Msg.showWarn(null, null, "Add To Program",
+				"Cannot Add To Program while program is locked.  Please wait or stop running tasks.");
+			return;
+		}
+
 		try {
 			ByteProvider provider = fsService.getByteProvider(fsrl, false, monitor);
 			if (provider.length() == 0) {
@@ -241,7 +247,7 @@ public class ImporterUtilities {
 			}
 
 			LoaderMap loaderMap = LoaderService.getSupportedLoadSpecs(provider,
-				loader -> loader.supportsLoadIntoProgram());
+				loader -> loader.supportsLoadIntoProgram(program));
 
 			SystemUtilities.runSwingLater(() -> {
 				AddToProgramDialog dialog =
@@ -270,8 +276,9 @@ public class ImporterUtilities {
 	 * 			to the destination filename
 	 * @param tool the parent UI component
 	 * @param programManager optional {@link ProgramManager} instance to open the imported file in
+	 * @param monitor {@link TaskMonitor}
 	 */
-	private static void importSingleFile(FSRL fsrl, DomainFolder destinationFolder,
+	public static void showImportSingleFileDialog(FSRL fsrl, DomainFolder destinationFolder,
 			String suggestedPath, PluginTool tool, ProgramManager programManager,
 			TaskMonitor monitor) {
 
@@ -280,8 +287,8 @@ public class ImporterUtilities {
 			LoaderMap loaderMap = LoaderService.getAllSupportedLoadSpecs(provider);
 
 			SystemUtilities.runSwingLater(() -> {
-				ImporterDialog importerDialog =
-					new ImporterDialog(tool, programManager, loaderMap, provider, suggestedPath);
+				ImporterDialog importerDialog = new ImporterDialog(tool, programManager, loaderMap,
+					provider, suggestedPath);
 				if (destinationFolder != null) {
 					importerDialog.setDestinationFolder(destinationFolder);
 				}
@@ -311,8 +318,19 @@ public class ImporterUtilities {
 					doFSImportHelper((GFileSystemProgramProvider) refdFile.fsRef.getFilesystem(),
 						gfile, destFolder, consumer, monitor);
 				if (program != null) {
-					doPostImportProcessing(tool, programManager, fsrl, Arrays.asList(program),
-						consumer, "", monitor);
+					LoadResults<? extends DomainObject> loadResults = new LoadResults<>(program,
+						program.getName(), destFolder.getPathname());
+					boolean success = false;
+					try {
+						doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
+							"", monitor);
+						success = true;
+					}
+					finally {
+						if (!success) {
+							program.release(consumer);
+						}
+					}
 				}
 			}
 			catch (Exception e) {
@@ -331,16 +349,25 @@ public class ImporterUtilities {
 		Program program =
 			pfs.getProgram(gfile, DefaultLanguageService.getLanguageService(), monitor, consumer);
 
-		if (program != null) {
+		if (program == null) {
+			return null;
+		}
+
+		boolean success = false;
+		try {
 			String importFilename = ProjectDataUtils.getUniqueName(destFolder, program.getName());
 			if (importFilename == null) {
-				program.release(consumer);
 				throw new IOException("Unable to find unique name for " + program.getName());
 			}
-
 			destFolder.createFile(importFilename, program, monitor);
+			success = true;
+			return program;
 		}
-		return program;
+		finally {
+			if (!success) {
+				program.release(consumer);
+			}
+		}
 
 	}
 
@@ -365,13 +392,13 @@ public class ImporterUtilities {
 
 			Object consumer = new Object();
 			MessageLog messageLog = new MessageLog();
-			List<DomainObject> importedObjects = loadSpec.getLoader().load(bp, programName,
-				destFolder, loadSpec, options, messageLog, consumer, monitor);
-			if (importedObjects == null) {
-				return;
-			}
+			LoadResults<? extends DomainObject> loadResults = loadSpec.getLoader()
+					.load(bp, programName, tool.getProject(), destFolder.getPathname(), loadSpec,
+						options, messageLog, consumer, monitor);
 
-			doPostImportProcessing(tool, programManager, fsrl, importedObjects, consumer,
+			loadResults.save(tool.getProject(), consumer, messageLog, monitor);
+
+			doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
 				messageLog.toString(), monitor);
 		}
 		catch (CancelledException e) {
@@ -384,19 +411,16 @@ public class ImporterUtilities {
 	}
 
 	private static Set<DomainFile> doPostImportProcessing(PluginTool pluginTool,
-			ProgramManager programManager, FSRL fsrl, List<DomainObject> importedObjects,
-			Object consumer, String importMessages, TaskMonitor monitor)
-			throws CancelledException, IOException {
+			ProgramManager programManager, FSRL fsrl,
+			LoadResults<? extends DomainObject> loadResults, Object consumer, String importMessages,
+			TaskMonitor monitor) throws CancelledException {
 
 		boolean firstProgram = true;
 		Set<DomainFile> importedFilesSet = new HashSet<>();
-		for (DomainObject importedObject : importedObjects) {
-			monitor.checkCanceled();
+		for (Loaded<? extends DomainObject> loaded : loadResults) {
+			monitor.checkCancelled();
 
-			if (importedObject instanceof Program) {
-				Program program = (Program) importedObject;
-				ProgramMappingService.createAssociation(fsrl, program);
-
+			if (loaded.getDomainObject() instanceof Program program) {
 				if (programManager != null) {
 					int openState = firstProgram
 							? ProgramManager.OPEN_CURRENT
@@ -407,10 +431,15 @@ public class ImporterUtilities {
 			}
 			if (firstProgram) {
 				// currently we only show results for the imported program, not any libraries
-				displayResults(pluginTool, importedObject, importedObject.getDomainFile(),
-					importMessages);
+				displayResults(pluginTool, loaded.getDomainObject(),
+					loaded.getDomainObject().getDomainFile(), importMessages);
+
+				// Optionally echo loader message log to application.log
+				if (!Loader.loggingDisabled && !importMessages.isEmpty()) {
+					Msg.info(ImporterUtilities.class, "Additional info:\n" + importMessages);
+				}
 			}
-			importedObject.release(consumer);
+			loaded.release(consumer);
 			firstProgram = false;
 		}
 
@@ -434,6 +463,11 @@ public class ImporterUtilities {
 		try (ByteProvider bp = fsService.getByteProvider(fsrl, false, monitor)) {
 			loadSpec.getLoader().loadInto(bp, loadSpec, options, messageLog, program, monitor);
 			displayResults(tool, program, program.getDomainFile(), messageLog.toString());
+
+			// Optionally echo loader message log to application.log
+			if (!Loader.loggingDisabled && messageLog.hasMessages()) {
+				Msg.info(ImporterUtilities.class, "Additional info:\n" + messageLog.toString());
+			}
 		}
 		catch (CancelledException e) {
 			return;
